# CryptoCurrency

./: .gitignore  README.md
Backend/: pyproject.toml
Backend/app/: main.py
Backend/app/src/: http_client.py  symbols.py
Backend/app/src/routers/: crypto.py
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: Router.jsx  images.js  main.jsx
Frontend/src/Components/Card/: Card.jsx
Frontend/src/Components/Crypto/: Crypto.jsx
Frontend/src/Components/Error404/: Error404.jsx
Frontend/src/Components/Error422/: Error422.jsx
Frontend/src/Components/Header/: Header.jsx
Frontend/src/Components/Home/: Home.jsx
Frontend/src/Components/Layout/: Layout.jsx
Frontend/src/Components/ListCard/: ListCard.jsx
