[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "MONSTER",email = "vladyarik88888@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "asgiref (>=3.8.1,<4.0.0)",
    "async-lru (>=2.0.5,<3.0.0)",
    "aiohttp (>=3.11.14,<4.0.0)",
    "flasgger (>=0.9.7.1,<0.10.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
